example/tests/snapshots/comprehensive_snapshots__repetitions__no_delim_empty.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar2::parse(\"\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [],
            span: (
                0,
                0,
            ),
        },
    },
)
