example/tests/snapshots/comprehensive_snapshots__repetitions__no_delim_many.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar2::parse(\"1 2 3 4 5\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [],
            span: (
                9,
                9,
            ),
        },
    },
)
