example/tests/snapshots/comprehensive_snapshots__repetitions__no_delim_single.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar2::parse(\"1\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [],
            span: (
                1,
                1,
            ),
        },
    },
)
