example/tests/snapshots/comprehensive_snapshots__repetitions__opt_elem_empty.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar3::parse(\"\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [],
            span: (
                0,
                0,
            ),
        },
        metadata: 123,
    },
)
